--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint",
-        "dev": "vue-cli-service build --watch --dest ../buk-gg/src/Buk.Gaming.Web/wwwroot"
+        "lint": "vue-cli-service lint"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.14.0",
@@ -14,7 +13,6 @@
         "bootstrap-vue": "^2.16.0",
         "chart.js": "^2.9.3",
         "epic-spinners": "^1.1.0",
-        "eslint": "^7.17.0",
         "lodash": "^4.17.20",
         "tslib": "^2.3.1",
         "vue": "^2.6.12",
@@ -36,33 +34,24 @@
         "@types/lodash": "^4.14.168",
         "@types/mocha": "^5.2.7",
         "@types/vue-i18n": "^7.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.4.0",
+        "@typescript-eslint/parser": "^4.4.0",
         "@vue/cli-plugin-babel": "^3.12.1",
         "@vue/cli-plugin-typescript": "^3.12.1",
         "@vue/cli-plugin-unit-mocha": "^3.12.1",
         "@vue/cli-service": "^3.12.1",
+        "@vue/eslint-config-typescript": "^7.0.0",
         "@vue/test-utils": "^1.0.5",
         "aspnet-prerendering": "^3.0.1",
         "aspnet-webpack": "^3.0.0",
+        "eslint": "^7.0.0",
+        "eslint-plugin-vue": "^7.0.0",
         "lint-staged": "^8.2.1",
         "node-sass": "^4.14.1",
-        "prettier": "2.0.5",
         "sass-loader": "^7.3.1",
-        "typescript": "^3.9.7",
+        "typescript": "^4.4.2",
         "vue-template-compiler": "^2.6.12",
         "webpack-bundle-analyzer": "^3.8.0",
         "webpack-hot-middleware": "^2.25.0"
-    },
-    "gitHooks": {
-        "pre-commit": "lint-staged"
-    },
-    "lint-staged": {
-        "*.ts": [
-            "vue-cli-service lint",
-            "git add"
-        ],
-        "*.vue": [
-            "vue-cli-service lint",
-            "git add"
-        ]
     }
 }
