--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,15 @@
 {
     "compilerOptions": {
         "outDir": "wwwroot",
+        "strict": true,
         "target": "es5",
         "module": "es2015",
-        "jsx": "preserve",
-        "importHelpers": true,
         "moduleResolution": "node",
-        "experimentalDecorators": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
         "baseUrl": ".",
         "types": ["webpack-env", "mocha"],
-        "typeRoots": ["src/@types"],
         "paths": {
             "@/*": [
                 "src/*"
