--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
         "sourceMap": true,
         "baseUrl": ".",
         "types": ["webpack-env", "mocha"],
